fix bug #4 - unreadable regex

--- a/index.less
+++ b/index.less
@@ -242,7 +242,6 @@
 
     &.group {
       color: @regex;
-      background-color: @regex;
     }
 
     &.character-class {
